# PlayersManager2

./: AVLTree.cpp  AVLTree.h  CMakeLists.txt  EmptyNode.cpp  EmptyNode.h  HashTable.cpp  HashTable.h  HashTableExceptions.cpp  HashTableExceptions.h  LevelNode.cpp  LevelNode.h  Node.cpp  Node.h  Player.cpp  Player.h  PlayersManager.cpp  PlayersManager.h  PlayersManagerExceptions.cpp  PlayersManagerExceptions.h  RankTree.cpp  RankTree.h  TreeExceptions.cpp  TreeExceptions.h  UnionFind.cpp  UnionFind.h  UnionFindNode.cpp  UnionFindNode.h  library2.cpp  library2.h  submissions.txt  ~$רוט מבנה הנתונים.docx  פירוט מבנה הנתונים.docx
almog2/with_playerbounds/: input_0.txt  input_1.txt  input_10.txt  input_11.txt  input_12.txt  input_13.txt  input_14.txt  input_15.txt  input_16.txt  input_17.txt  input_18.txt  input_19.txt  input_2.txt  input_20.txt  input_21.txt  input_22.txt  input_23.txt  input_24.txt  input_25.txt  input_26.txt  input_27.txt  input_28.txt  input_29.txt  input_3.txt  (+176 more)
shafran/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_21.txt  output_22.txt  output_23.txt  output_24.txt  output_25.txt  output_26.txt  output_27.txt  output_28.txt  output_29.txt  output_3.txt  output_30.txt  output_31.txt  output_32.txt  output_33.txt  output_34.txt  output_35.txt  output_36.txt  output_37.txt  output_38.txt  output_39.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt  testfile1.txt  (+38 more)
(+240 files in other folders)
